@@ -1,3 +1,7 @@
+2005-10-19  Diego Novillo  <dnovillo@redhat.com>
+
+	* testsuite/libgomp.fortran/jacobi.f: New test.
+
 2005-10-19  Richard Henderson  <rth@redhat.com>
 
 	* configure.tgt (i?86-linux): Default to with_arch instead of
